- resolves #6581