@@ -712,7 +712,7 @@ public class PyramusUserSchoolDataBridge implements UserSchoolDataBridge {
       // Convert Pyramus student group id to Muikku userGroupEntityId
 
       SchoolDataIdentifier userGroupIdentifier = new SchoolDataIdentifier(
-          identifierMapper.getStudentGroupIdentifier(new Long(response.getEntity().getIdentifier())),
+          identifierMapper.getStudentGroupIdentifier(Long.valueOf(response.getEntity().getIdentifier())),
           SchoolDataPyramusPluginDescriptor.SCHOOL_DATA_SOURCE);
       Long userGroupEntityId = userGroupDiscoveryWaiter.waitDiscovered(userGroupIdentifier);
       response.getEntity().setIdentifier(userGroupEntityId.toString());
@@ -725,7 +725,7 @@ public class PyramusUserSchoolDataBridge implements UserSchoolDataBridge {
 
     // Convert Muikku userGroupEntityId to Pyramus student group id
 
-    Long userGroupEntityId = new Long(payload.getIdentifier());
+    Long userGroupEntityId = Long.valueOf(payload.getIdentifier());
     UserGroupEntity userGroupEntity = userGroupEntityController.findUserGroupEntityById(userGroupEntityId);
     Long pyramusStudentGroupId = identifierMapper.getPyramusStudentGroupId(userGroupEntity.getIdentifier());
     payload.setIdentifier(pyramusStudentGroupId.toString());
@@ -755,7 +755,7 @@ public class PyramusUserSchoolDataBridge implements UserSchoolDataBridge {
 
     // Convert Muikku userGroupEntityId to Pyramus student group id
 
-    Long userGroupEntityId = new Long(payload.getGroupIdentifier());
+    Long userGroupEntityId = Long.valueOf(payload.getGroupIdentifier());
     UserGroupEntity userGroupEntity = userGroupEntityController.findUserGroupEntityById(userGroupEntityId);
     Long pyramusStudentGroupId = identifierMapper.getPyramusStudentGroupId(userGroupEntity.getIdentifier());
     payload.setGroupIdentifier(pyramusStudentGroupId.toString());
@@ -791,7 +791,7 @@ public class PyramusUserSchoolDataBridge implements UserSchoolDataBridge {
 
     // Convert Muikku userGroupEntityId to Pyramus student group id
 
-    Long userGroupEntityId = new Long(payload.getGroupIdentifier());
+    Long userGroupEntityId = Long.valueOf(payload.getGroupIdentifier());
     UserGroupEntity userGroupEntity = userGroupEntityController.findUserGroupEntityById(userGroupEntityId);
     Long pyramusStudentGroupId = identifierMapper.getPyramusStudentGroupId(userGroupEntity.getIdentifier());
     payload.setGroupIdentifier(pyramusStudentGroupId.toString());
@@ -1606,18 +1606,6 @@ public class PyramusUserSchoolDataBridge implements UserSchoolDataBridge {
     return createStudentEntity(response.getEntity());
   }
 
-  @Override
-  public String getUserDefaultEmailAddress(String userIdentifier) {
-    Long userId = identifierMapper.getPyramusStudentId(userIdentifier);
-    if (userId == null) {
-      userId = identifierMapper.getPyramusStaffId(userIdentifier);
-    }
-    if (userId == null) {
-      return null;
-    }
-    return pyramusClient.get(String.format("/users/users/%d/defaultEmailAddress", userId), String.class);
-  }
-  
   @Override
   public boolean amICounselor(String studentIdentifier) {
     
